# hausportal

./: .gitignore  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routers/: auth.py  documents.py  health_db.py  invites.py  properties.py  tickets.py  units.py  user_units.py
app/core/: config.py  security.py
app/db/: base.py
app/db/migrations/: env.py
app/db/migrations/versions/: 26d44dfbee42_create_tenants_users_invites.py  2bc7c66de307_add_document_object_key.py  3c8f0c2a1c2e_add_document_publish_fields.py  9f2add4cc744_init.py  d45893f729f7_add_properties_units_user_units.py  d5bc3acf9171_add_documents.py  edc44e479611_add_tickets.py
app/integrations/: s3.py
app/models/: __init__.py  document.py  invite.py  property.py  tenant.py  ticket.py  unit.py  user.py  user_unit.py
app/schemas/: documents.py  invite.py  property.py  ticket.py  tickets.py  unit.py  user_unit.py
app/services/: documents.py
scripts/: bootstrap_admin.py
